--- a/KalturaDemos/MultipleDTGPlayerDemo/src/main/AndroidManifest.xml
+++ b/KalturaDemos/MultipleDTGPlayerDemo/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
         android:label="@string/app_name"
         android:supportsRtl="false"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+                  android:configChanges="orientation"
+                  android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
